fix: remove z-index

--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -8,7 +8,6 @@
       align-items: center;
       position: fixed;
       top: 0;
-      z-index: 4;
       right: 0;
     }
 }
